[tool.poetry]
name = "ewsclient"
version = "0.1.0"
description = "ESClient Extract Jar"
authors = ["Sandesh Nataraj <snataraj@ilts.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
